
[metadata]
name = fd.partialdate
version = 0
license_files = LICENSE.rst
author = Fred Drake
author_email = fred@fdrake.net
url = https://github.com/freddrake/fd.partialdate
description = Library for partial date values
classifiers =
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
namespace_packages = fd
packages = fd.partialdate
package_dir =
    = src
